--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,9 @@ channels:
 dependencies:
   - abseil-cpp=20211102.0=hdf3f5d2_2
   - anndata=0.9.2=pyhd8ed1ab_0
+  - ansi2html=1.9.1=py310hca03da5_0
   - anyio=3.6.2=pyhd8ed1ab_0
+  - anywidget=0.9.18=py310hca03da5_0
   - appnope=0.1.2=py310hca03da5_1001
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py310h1a28f6b_0
@@ -22,18 +24,20 @@ dependencies:
   - blas=2.116=openblas
   - blas-devel=3.9.0=16_osxarm64_openblas
   - bleach=6.0.0=pyhd8ed1ab_0
+  - blinker=1.9.0=py310hca03da5_0
   - blosc=1.21.3=h313beb8_0
   - bokeh=3.1.1=py310h33ce5c2_0
   - boost-cpp=1.78.0=hb428463_0
   - bottleneck=1.3.5=py310h96f19d2_0
   - brotli=1.0.9=h1a8c8d9_8
   - brotli-bin=1.0.9=h1a8c8d9_8
+  - brotli-python=1.0.9=py310h313beb8_9
   - brotlipy=0.7.0=py310h1a28f6b_1002
   - brunsli=0.1=hc377ac9_1
   - bzip2=1.0.8=h620ffc9_4
   - c-ares=1.18.1=h3422bc3_0
-  - ca-certificates=2025.7.15=hca03da5_0
-  - certifi=2025.8.3=py310hca03da5_0
+  - ca-certificates=2025.11.12=hbd8a1cb_0
+  - certifi=2025.11.12=pyhd8ed1ab_0
   - cffi=1.15.1=py310h80987f9_3
   - cfitsio=3.470=h7f6438f_7
   - charls=2.2.0=hc377ac9_0
@@ -45,6 +49,7 @@ dependencies:
   - cryptography=39.0.1=py310h834c97f_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - cytoolz=0.12.2=py310h80987f9_0
+  - dash=2.14.2=py310hca03da5_0
   - dask-core=2024.5.0=py310hca03da5_0
   - debugpy=1.5.1=py310hc377ac9_0
   - decorator=5.1.1=pyhd3eb1b0_0
@@ -52,6 +57,8 @@ dependencies:
   - entrypoints=0.4=py310hca03da5_0
   - et_xmlfile=1.1.0=py310hca03da5_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - flask=3.0.3=py310hca03da5_0
+  - flask-compress=1.10.1=pyhd3eb1b0_0
   - flit-core=3.8.0=pyhd8ed1ab_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=h1192e45_0
@@ -69,9 +76,10 @@ dependencies:
   - importlib_resources=5.12.0=pyhd8ed1ab_0
   - ipykernel=6.19.2=py310h33ce5c2_0
   - ipympl=0.9.3=py310hca03da5_0
-  - ipython=8.10.0=py310hca03da5_0
+  - ipython=8.37.0=pyh8f84b5b_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=8.0.4=py310hca03da5_0
+  - itsdangerous=2.2.0=py310hca03da5_0
   - jedi=0.18.1=py310hca03da5_1
   - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.2.0=py310hca03da5_0
@@ -123,6 +131,7 @@ dependencies:
   - libwebp=1.3.2=ha3663a8_0
   - libwebp-base=1.3.2=h80987f9_0
   - libzopfli=1.0.3=hc377ac9_0
+  - line_profiler=4.2.0=py310h48ca7d4_0
   - llvm-openmp=15.0.7=h7cfbb63_0
   - locket=1.0.0=py310hca03da5_0
   - lz4-c=1.9.4=hb7217d7_0
@@ -150,7 +159,7 @@ dependencies:
   - openblas=0.3.21=openmp_hf78f355_3
   - openjpeg=2.3.0=h7a6adac_2
   - openpyxl=3.1.5=py310h80987f9_0
-  - openssl=1.1.1w=h1a28f6b_0
+  - openssl=1.1.1w=h53f4e23_0
   - orc=1.7.4=hdca1487_1
   - packaging=22.0=py310hca03da5_0
   - pandoc=2.19.2=hce30654_1
@@ -165,8 +174,9 @@ dependencies:
   - platformdirs=2.5.2=py310hca03da5_0
   - pooch=1.7.0=py310hca03da5_0
   - prometheus_client=0.16.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.36=py310hca03da5_0
+  - prompt-toolkit=3.0.52=pyha770c72_0
   - psutil=5.9.0=py310h1a28f6b_0
+  - psygnal=0.12.0=py310hca03da5_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pyarrow=8.0.0=py310hf303d72_0
@@ -188,6 +198,7 @@ dependencies:
   - re2=2022.04.01=h6b3803e_0
   - readline=8.2=h1a28f6b_0
   - requests=2.28.2=pyhd8ed1ab_0
+  - retrying=1.3.3=pyhd3eb1b0_2
   - scanpy=1.10.2=pyhd8ed1ab_0
   - scikit-image=0.20.0=py310h313beb8_0
   - scikit-learn=1.3.0=py310h46d7db6_0
@@ -203,6 +214,7 @@ dependencies:
   - stack_data=0.2.0=pyhd3eb1b0_0
   - stdlib-list=0.10.0=py310hca03da5_0
   - tbb=2021.8.0=h48ca7d4_0
+  - tenacity=9.0.0=py310hca03da5_0
   - terminado=0.17.1=pyhd1c38e8_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tifffile=2021.7.2=pyhd3eb1b0_2
@@ -211,8 +223,8 @@ dependencies:
   - tomli=2.0.1=pyhd8ed1ab_0
   - toolz=0.12.0=py310hca03da5_0
   - tornado=6.2=py310h1a28f6b_0
-  - traitlets=5.7.1=py310hca03da5_0
-  - typing_extensions=4.4.0=pyha770c72_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - typing_extensions=4.15.0=pyhcf101f3_0
   - tzdata=2022g=h04d1e81_0
   - umap-learn=0.5.4=py310hca03da5_1
   - urllib3=1.26.14=pyhd8ed1ab_0
@@ -220,6 +232,7 @@ dependencies:
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py_1
   - websocket-client=1.5.1=pyhd8ed1ab_0
+  - werkzeug=3.0.6=py310hca03da5_0
   - wheel=0.38.4=py310hca03da5_0
   - widgetsnbextension=4.0.5=py310hca03da5_0
   - xyzservices=2022.9.0=py310hca03da5_1
@@ -242,42 +255,52 @@ dependencies:
       - biothings-client==0.3.0
       - botocore==1.31.17
       - bs4==0.0.2
+      - choreographer==1.1.1
       - colorcet==3.0.1
       - ec==0.0.0
+      - exceptiongroup==1.3.0
       - frozenlist==1.4.0
       - fsspec==2023.5.0
       - h5py==3.8.0
       - igraph==0.11.9
+      - iniconfig==2.1.0
       - iqplot==0.3.2
       - jmespath==1.0.1
+      - kaleido==1.1.0
       - kb-python==0.29.0
       - leidenalg==0.10.2
       - llvmlite==0.41.1
       - loess==2.1.2
+      - logistro==1.1.0
       - loompy==3.0.7
       - lxml==5.3.0
       - multidict==6.0.4
       - mx==0.0.0
       - mygene==3.2.2
+      - narwhals==2.5.0
       - ngs-tools==1.8.6
       - numba==0.58.1
       - numpy==1.24.3
       - numpy-groupies==0.11.2
       - optimparallel==0.1.3
+      - orjson==3.11.3
       - pandas==2.0.2
       - param==1.12.3
       - patsy==0.5.3
       - plotbin==3.1.5
-      - plotly==5.24.1
+      - plotly==6.3.0
+      - pluggy==1.6.0
       - progress==1.6
       - pyct==0.5.0
       - pysam==0.22.1
+      - pytest==8.4.2
+      - pytest-timeout==2.4.0
       - qnorm==0.8.1
       - s3fs==2023.5.0
       - setuptools==67.8.0
       - shortuuid==1.0.13
+      - simplejson==3.20.1
       - statsmodels==0.14.0
-      - tenacity==9.0.0
       - texttable==1.7.0
       - tqdm==4.65.0
       - wget==3.2
